--- a/kafka-streaming/pom.xml
+++ b/kafka-streaming/pom.xml
@@ -6,6 +6,8 @@
   <inceptionYear>2008</inceptionYear>
   <properties>
     <scala.version>2.10.5</scala.version>
+    <!--slf4j版本-->
+    <slf4j-version>1.7.20</slf4j-version>
   </properties>
 
   <repositories>
@@ -35,7 +37,7 @@
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-streaming_2.10</artifactId>
       <version>1.6.0</version>
-    <!--  <scope>provided</scope>-->
+     <!-- <scope>provided</scope>-->
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
@@ -43,8 +45,15 @@
       <version>1.6.0</version>
      <!-- <scope>provided</scope>-->
     </dependency>
+      <!-- SparkSql 相关jar-->
+      <dependency>
+          <groupId>org.apache.spark</groupId>
+          <artifactId>spark-sql_2.10</artifactId>
+          <version>1.6.0</version>
+      </dependency>
 
-    <!-- 数据库连接驱动-->
+
+      <!-- 数据库连接驱动-->
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
@@ -140,15 +149,15 @@
       <artifactId>jackson-xc</artifactId>
       <version>1.9.13</version>
     </dependency>
-    <dependency>
+    <!--<dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>1.6.4</version>
-    </dependency>
+    </dependency>-->
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
-      <version>1.6.4</version>
+      <version>${slf4j-version}</version>
     </dependency>
 
     <!-- Hadoop依赖包-->
@@ -201,6 +210,27 @@
       <artifactId>commons-pool2</artifactId>
       <version>2.2</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.40</version>
+    </dependency>
+    <!--日期处理工具包-->
+    <!-- https://mvnrepository.com/artifact/joda-time/joda-time -->
+    <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <version>2.3</version>
+    </dependency>
+
+    <!-- 自己下载的twitter jar-->
+    <!--<dependency>
+      <groupId>com.twitter</groupId>
+      <artifactId>util-hashing_2.10</artifactId>
+      <version>6.33.0</version>
+    </dependency>-->
+
   </dependencies>
 
   <build>
